fix homepage spacing

--- a/_sass/_components/featured-posts.scss
+++ b/_sass/_components/featured-posts.scss
@@ -8,10 +8,6 @@
   h2 {
     margin-bottom: units(2);
 
-    @include at-media('tablet') {
-      margin-bottom: 0;
-    }
-
     a {
       color: color('primary-dark');
       text-decoration: none;
@@ -37,6 +33,11 @@
   }
 
   .post {
+    margin-bottom: units(3);
+
+    @include at-media('tablet'){
+      margin-bottom: 0;
+    }
 
     &:last-of-type {
       margin-bottom: 0;
