--- a/_sass/_components/post-details.scss
+++ b/_sass/_components/post-details.scss
@@ -15,10 +15,6 @@
   position: relative;
 }
 
-.post {
-  margin-top: 2rem;
-}
-
 .post-byline {
   color: color('base-dark');
   display: inline-block;
